fix: improve notification mobile layout

--- a/public/common/global.css
+++ b/public/common/global.css
@@ -507,4 +507,9 @@ a {
     .mobile-top-bar-button i {
         font-size: var(--icon-size);
     }
+    
+    .event-box-top {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 }
